add ldap validation
added ldap validation on the server side

--- a/metridoc-grails-core/grails-app/i18n/message.properties
+++ b/metridoc-grails-core/grails-app/i18n/message.properties
@@ -12,3 +12,11 @@ shiroUser.emailAddress.label=Email Address
 shiroUser.roles.label=Roles
 cannot.modify.message={0} cannot be modified
 update.failed.message=update failed
+ldapData.server.blank=LDAP server must be specified, ie ldap://foo.bar.edu:389
+ldapData.server.nullable=LDAP server must be specified, ie ldap://foo.bar.edu:389
+ldapData.rootDN.blank=LDAP [rootDN] must be specified, ie DC=library,DC=foo,DC=edu
+ldapData.rootDN.nullable=LDAP [rootDN] must be specified, ie DC=library,DC=foo,DC=edu
+ldapData.userSearchBase.blank=LDAP [User Search Base] must be specified, ie OU=PennLibraryDepts
+ldapData.userSearchBase.nullable=LDAP [User Search Base] must be specified, ie OU=PennLibraryDepts
+ldapData.userSearchFilter.nullable=LDAP [User Search Filter] must be specified, ie sAMAccountName
+ldapData.userSearchFilter.blank=LDAP [User Search Filter] must be specified, ie sAMAccountName
