Add useful server messages
I went through all basic functionality I could think of, and I believe I covered all the 500 errors.

--- a/metridoc-grails-rid/grails-app/i18n/messages.properties
+++ b/metridoc-grails-rid/grails-app/i18n/messages.properties
@@ -53,3 +53,6 @@ typeMismatch.java.lang.Long=Item {0} in this form must be a valid number
 typeMismatch.java.lang.Short=Item {0} in this form must be a valid number
 typeMismatch.java.math.BigDecimal=Item {0} in this form must be a valid number
 typeMismatch.java.math.BigInteger=Item {0} in this form must be a valid number
+
+#Errors related to spreadsheet functionality
+spreadsheet.invalid.format=The format of this file is invalid. Check the file type
